@@ -1,5 +1,7 @@
-# Copyright 2000-2002 Daniel Robbins, Gentoo Technologies, Inc.
+# Copyright 2000-2003 Daniel Robbins, Gentoo Technologies, Inc.
 # Contains local system settings for Portage system
+# $Header$
+
 # Please review 'man make.conf' for more information.
 
 # Build-time functionality
