@@ -1,5 +1,6 @@
 # Copyright 2002 Daniel Robbins, Gentoo Technologies, Inc.
 # System-wide defaults for the Portage system
+# $Header$
 
 #            *****************************
 #            **  DO NOT EDIT THIS FILE  **
