@@ -628,3 +628,5 @@ Mark Guertin <gerk@gentoo.org>
 Nicholas Jones <carpaski@gentoo.org>
 .br
 Mike Frysinger <vapier@gentoo.org>
+.SH "CVS HEADER"
+$Header$
