@@ -217,3 +217,5 @@ Daniel Robbins <drobbins@gentoo.org>
 Nicholas Jones <carpaski@gentoo.org>
 .br
 Mike Frysinger <vapier@gentoo.org>
+.SH "CVS HEADER"
+$Header$
