@@ -107,3 +107,5 @@ Please report bugs via http://bugs.gentoo.org/
 .BR emerge (1)
 .br
 The \fIdev-util/lintool\fR package. 
+.SH "CVS HEADER"
+$Header$
