@@ -1,3 +1,4 @@
+# $Header$
 import sys
 import os
 import string
